# Tensbook

./: .gitignore  Cargo.toml  LICENSE  README.md  description.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: applied-math-ode-implementation-plan.md  applied-math-ode-support.md  editor-bugfix-guide.md  language.md  ode-output-style-options.html  ode-show-styles.html  plot-feature-plan.md  releasing.md  source-preview-layouts.html  tensbook-icon-options.html  ui-design.md
docs/releases/: v1.1.2.md
examples/: applied-math-ode.tens  hill_cr.tens  mooney_rivlin_uniaxial.tens  neo_hookean.tens  start.tens  untitled.tens
packaging/: tensbook-cask.rb  tensorforge-cask.rb  tensorforge.rb
scripts/: bundle-codemirror.mjs  prepare-release.sh
src/: ast.rs  differentiation.rs  error.rs  indices.rs  integration.rs  interpreter.rs  lib.rs  main.rs  metadata.rs  numeric.rs  ode.rs  plot.rs  simplifier.rs  substitute.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/ode/: mod.rs  render.rs  solve.rs  util.rs
src/parser/: lexer.rs  mod.rs
src/renderer/: components.rs  latex.rs  mod.rs  spectral.rs
src/symbolic/: mod.rs
src/tensor/: inference.rs  mod.rs
tests/: applied_math_ode.rs  compound_diff.rs  differentiation.rs  fourth_order_tangent.rs  hill_cr.rs  mvp.rs  parser_errors.rs  plot.rs  scalar_functions.rs  sets.rs  simplify_and_tangent.rs  spec_decomp.rs  spectral_and_products.rs  tensor_power.rs
ui/: codemirror-entry.js  completion.js  document-model.js  index.html  latest-task.js  main.js  markdown-render.js  render.js  start.tens
ui/tests/: document-model.test.js  latest-task.test.js  markdown-render.test.js  render.test.js
