[workspace]
members = [".", "src-tauri"]

[package]
name = "tensorforge"
version = "1.0.0"
edition = "2021"
description = "A symbolic tensor algebra system for continuum mechanics (MVP: .tens DSL interpreter + LaTeX renderer)"
license = "MIT"
authors = ["Chongran Zhao <chongran_zhao@brown.edu>"]
homepage = "https://chongran-zhao.github.io"
repository = "https://github.com/Chongran-Zhao/TensorForge"

[[bin]]
name = "tensorforge"
path = "src/main.rs"

[lib]
name = "tensorforge"
path = "src/lib.rs"
