[workspace]
members = [".", "src-tauri"]

[package]
name = "tensbook"
version = "1.1.0"
edition = "2021"
description = "Symbolic math engine behind the Tensbook notebook (.tens DSL: tensor algebra, calculus, ODEs, plotting)"
license = "MIT"
authors = ["Chongran Zhao <chongran_zhao@brown.edu>"]
homepage = "https://chongran-zhao.github.io"
repository = "https://github.com/Chongran-Zhao/Tensbook"

[[bin]]
name = "tensbook"
path = "src/main.rs"

[lib]
name = "tensbook"
path = "src/lib.rs"
