[package]
name = "tensorforge-app"
version = "1.1.0"
edition = "2021"
description = "TensorForge desktop app (Tauri shell around the tensorforge engine)"
license = "MIT"
authors = ["Chongran Zhao <chongran_zhao@brown.edu>"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tensorforge = { path = ".." }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
