[package]
name = "tensbook-app"
version = "1.1.2"
edition = "2021"
description = "Tensbook desktop app (Tauri shell around the tensbook engine)"
license = "MIT"
authors = ["Chongran Zhao <chongran_zhao@brown.edu>"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tensbook = { path = ".." }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
